<resources>
    <string name="app_name">Tapeando</string>

    <string name="action_settings">Settings</string>
    <string name="action_clean">Limpiar mesa</string>
    <string name="table_number_title">Mesa número %s</string>
    <string name="action_assign_fellows">Asignar número de comensales</string>
    <string name="action_clean_all">Limpiar todas las mesas</string>
    <string name="table_list_title">Listado de mesas</string>
    <string name="number_of_fellows_dialog_title">Introduce el número de comensales:</string>
    <string name="number_of_fellows_example">p.e.: 5</string>
    <string name="set_fellows_errors_hint">Por favor, asigna un valor numerico</string>
    <string name="number_of_fellows_format">Número de comensales: %d</string>
    <string name="number_of_fellows_hint_format">p.e.: %d</string>
    <string name="action_refresh_courses">Recargar platos</string>
    <string name="description_example">Plato compuesto por</string>
    <string name="description_title">Descripción:</string>
    <string name="course_name_example">Ensalada mixta</string>
    <string name="action_add">Añadir plato</string>
    <string name="courses_downloaded">El menú ya está disponible</string>
    <string name="notes_example">Ejemplo de anotaciones para un plato en concreto.</string>
    <string name="action_delete">Borrar plato</string>
    <string name="no_courses_added">No se ha añadido ningún plato</string>
    <string name="fellows">comensales</string>
    <string name="courses">platos</string>
    <string name="previous">Anterior</string>
    <string name="next">Siguiente</string>
    <string name="clean_all_tables_dialog_title">¿Desea limpiar todas las mesas?</string>
    <string name="clean_all_tables_dialog_message">Se perderán todos los datos (comensales, platos) y no se podrán recuperar</string>
    <string name="course_title_example">Ensalada mixta</string>
    <string name="course_notes_hint">Anotaciones específicas del plato</string>
    <string name="course_notes_dialog_title">Peticiones especiales</string>
    <string name="notes_title">Notas</string>
    <string name="course_added_snackbar_message">Plato añadido</string>
    <string name="allergens_title">Alérgenos_</string>
    <string name="allergens_example">Huevo, marisco, frutos secos</string>
    <string name="course_description">Esto es un ejemplo de una descripción de un plato. Incluimos algunas líneas para detectar problemas de espacio</string>
    <string name="course_description_title">Descripción:</string>
    <string name="course_notes_title">Notas:</string>
    <string name="bill_format">%.2f €</string>



    <string name="list_item_table_bill_hint">50€</string>
    <string name="list_item_table_name">Mesa</string>
    <string name="course_no_allergens">Sin alérgenos</string>
    <string name="course_has_peanuts">Contiene frutos secos</string>
    <string name="course_has_milk">Contiene lactosa</string>
    <string name="course_has_fish">Contiene pescado</string>
    <string name="course_has_egg">Contiene huevo</string>
    <string name="course_has_mustard">Contiene mostaza</string>
    <string name="course_has_gluten">Contiene gluten</string>
    <string name="course_has_shellfish">Contiene marisco</string>
    <string name="number_of_courses_hint">Numero de platos</string>
    <string name="fragment_course_name_hint">Nombre del plato</string>
    <string name="fragment_course_allergens_string_hint">Listado de alérgenos</string>
    <string name="fragment_course_description_label_text_view">Descripción</string>
    <string name="fragment_course_allergens_label_text_view">Alérgenos</string>
    <string name="fragment_course_description_hint">Descripción del plato</string>
    <string name="fragment_course_price_label_text_view">Precio</string>
    <string name="fragment_course_price_hint">Precio del plato</string>
    <string name="fragment_course_notes_label_text_view">Notas</string>
</resources>
