<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp"
    android:layout_margin="@dimen/activity_horizontal_margin">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/card_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textSize="18sp"
            android:text="@string/course_name_example"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/card_course_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_course_name"
            android:layout_alignRight="@+id/card_course_name"
            android:layout_alignLeft="@+id/card_course_name"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/card_course_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/icon_course"
                android:scaleType="fitCenter"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:text="@string/description_title"/>

                <TextView
                    android:id="@+id/card_course_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textSize="12sp"
                    android:text="@string/description_example"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/allergens_title"/>

                <TextView
                    android:id="@+id/card_course_allergens"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:textSize="12sp"
                    android:text="@string/allergens_example"/>

                <TextView
                    android:id="@+id/card_course_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="right"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="14sp"
                    android:text="12.5 €"/>

            </LinearLayout>

        </LinearLayout>

        <!--
        <TextView
            android:id="@+id/card_course_notes_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignRight="@+id/card_course_name"
            android:layout_alignLeft="@+id/card_course_name"
            android:layout_below="@+id/card_course_content"
            android:textSize="11sp"
            android:text="@string/notes_title"/>
        <TextView
            android:id="@+id/card_course_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_alignRight="@+id/card_course_name"
            android:layout_alignLeft="@+id/card_course_name"
            android:layout_below="@+id/card_course_notes_title"
            android:textSize="12sp"
            android:text="@string/notes_example"/>
            -->

    </RelativeLayout>

</android.support.v7.widget.CardView>